fix: misaligning page content in certain states

--- a/src/css/injected.scss
+++ b/src/css/injected.scss
@@ -432,10 +432,6 @@ ol:has(.MessageList__avatar___2wxyb svg) {
 .quickbar[data-yiq='light'] .actions {
   color: white !important;
 }
-.menuShown > :last-child
-{
-  top: 18% !important;
-}
 .singleSelect > li {
   border-radius: 4px;
   margin-top: 4px !important;
